--- a/caderitter.css
+++ b/caderitter.css
@@ -1,8 +1,61 @@
-body {
+/* body {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-align: center;
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
+} */
+
+.page-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
+
+.symbol-container {
+    display: flex;
+}
+
+/* .symbol-container img:nth-child(2) {
+    animation-delay: 100ms !important;
+}
+
+.symbol-container img:nth-child(3) {
+    animation-delay: 200ms !important;
+}
+
+#symbol-1 {
+    animation: symbol-fade-in 1s ease-in-out;
+}
+
+@keyframes symbol-fade-in {
+    from {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+} */
+
+@keyframes symbol-flicker {
+    
+}
+
+.symbol {
+    color: #fff;
+    box-shadow:
+        0 0 7px #fff,
+        0 0 10px #fff,
+        0 0 21px #fff,
+        0 0 42px #0fa,
+        0 0 82px #0fa,
+        0 0 92px #0fa,
+        0 0 102px #0fa,
+        0 0 151px #0fa;
 }
